# django_project

./: .gitignore  README.md  pyproject.toml
sitewomen/: db.json  manage.py
sitewomen/sitewomen/: settings.py  urls.py
sitewomen/templates/: base.html
sitewomen/users/: apps.py  forms.py  tests.py  urls.py  views.py
sitewomen/users/migrations/: 0001_initial.py
sitewomen/users/templates/users/: login.html  profile.html  register.html
sitewomen/women/: admin.py  converters.py  forms.py  models.py  tests.py  urls.py  views.py
sitewomen/women/fixtures/: users_user.json
sitewomen/women/migrations/: 0001_initial.py
sitewomen/women/static/women/css/: styles.css
sitewomen/women/templates/women/: about.html  addpage.html  index.html  post.html
